@@ -16,6 +16,9 @@
 
 package androidx.appsearch.compiler;
 
+import static androidx.appsearch.compiler.AppSearchCompiler.OUTPUT_DIR_OPTION;
+import static androidx.appsearch.compiler.AppSearchCompiler.RESTRICT_GENERATED_CODE_TO_LIB_OPTION;
+
 import static com.google.testing.compile.CompilationSubject.assertThat;
 
 import com.google.auto.value.processor.AutoValueProcessor;
@@ -59,11 +62,12 @@ public class AppSearchCompilerTest {
     @Test
     public void testPrivate() {
         Compilation compilation = compile(
-                "Wrapper",
+                /* classSimpleName= */"Wrapper",
                 "public class Wrapper {\n"
                         + "@Document\n"
                         + "private class Gift {}\n"
-                        + "}  // Wrapper\n"
+                        + "}  // Wrapper\n",
+                /* restrictGeneratedCodeToLibrary= */false
         );
 
         assertThat(compilation).hadErrorContaining("annotated class is private");
@@ -92,11 +96,11 @@ public class AppSearchCompilerTest {
                         + "}\n");
 
         assertThat(compilation).hadErrorContaining(
-                "contains multiple fields annotated @Id");
+                "Duplicate member annotated with @Id");
     }
 
     @Test
-    public void testAutoValueInheritance() throws Exception {
+    public void testAutoValueInheritance() {
         Compilation docExtendsAutoValueDoc = compile(
                 "import com.google.auto.value.AutoValue;\n"
                         + "import com.google.auto.value.AutoValue.*;\n"
@@ -144,7 +148,7 @@ public class AppSearchCompilerTest {
     }
 
     @Test
-    public void testSuperClassErrors() throws Exception {
+    public void testSuperClassErrors() {
         Compilation specialFieldReassigned = compile(
                 "@Document\n"
                         + "public class Gift {\n"
@@ -166,28 +170,8 @@ public class AppSearchCompilerTest {
                         + "  }\n"
                         + "}\n");
         assertThat(specialFieldReassigned).hadErrorContaining(
-                "Non-annotated field overriding special annotated fields named: id");
-
-        Compilation nonAnnotatedFieldHasSameName = compile(
-                "@Document\n"
-                        + "public class Gift {\n"
-                        + "  @Document.Namespace String namespace;\n"
-                        + "  @Document.Id String id;\n"
-                        + "  Gift(String id, String namespace) {\n"
-                        + "    this.id = id;\n"
-                        + "    this.namespace = namespace;\n"
-                        + "  }\n"
-                        + "}\n"
-                        + "@Document\n"
-                        + "class CoolGift extends Gift {\n"
-                        + "  String id;\n"
-                        + "  CoolGift(String id, String namespace) {\n"
-                        + "    super(id, namespace);\n"
-                        + "  }\n"
-                        + "  public String getId() { return id; }\n"
-                        + "}\n");
-        assertThat(nonAnnotatedFieldHasSameName).hadErrorContaining(
-                "Non-annotated field overriding special annotated fields named: id");
+                "Property type must stay consistent when overriding annotated "
+                        + "members but changed from @Id -> @StringProperty");
 
         //error on collision
         Compilation idCollision = compile(
@@ -211,7 +195,7 @@ public class AppSearchCompilerTest {
                         + "  public boolean getBadId() { return badId; }\n"
                         + "}\n");
         assertThat(idCollision).hadErrorContaining(
-                "Class hierarchy contains multiple fields annotated @Id");
+                "Duplicate member annotated with @Id");
 
         Compilation nsCollision = compile(
                 "@Document\n"
@@ -232,7 +216,7 @@ public class AppSearchCompilerTest {
                         + "  }\n"
                         + "}\n");
         assertThat(nsCollision).hadErrorContaining(
-                "Class hierarchy contains multiple fields annotated @Namespace");
+                "Duplicate member annotated with @Namespace");
     }
 
     @Test
@@ -456,7 +440,7 @@ public class AppSearchCompilerTest {
                         + "}\n");
 
         assertThat(compilation).hadErrorContaining(
-                "contains multiple fields annotated @CreationTimestampMillis");
+                "Duplicate member annotated with @CreationTimestampMillis");
     }
 
     @Test
@@ -482,7 +466,7 @@ public class AppSearchCompilerTest {
                         + "}\n");
 
         assertThat(compilation).hadErrorContaining(
-                "contains multiple fields annotated @Namespace");
+                "Duplicate member annotated with @Namespace");
     }
 
     @Test
@@ -497,7 +481,7 @@ public class AppSearchCompilerTest {
                         + "}\n");
 
         assertThat(compilation).hadErrorContaining(
-                "contains multiple fields annotated @TtlMillis");
+                "Duplicate member annotated with @TtlMillis");
     }
 
     @Test
@@ -512,7 +496,35 @@ public class AppSearchCompilerTest {
                         + "}\n");
 
         assertThat(compilation).hadErrorContaining(
-                "contains multiple fields annotated @Score");
+                "Duplicate member annotated with @Score");
+    }
+
+    @Test
+    public void testClassSpecialValues() throws Exception {
+        Compilation compilation = compile(
+                "@Document\n"
+                        + "public class Gift {\n"
+                        + "    @Document.Namespace\n"
+                        + "    String mNamespace;\n"
+                        + "    @Document.Id\n"
+                        + "    String mId;\n"
+                        + "    @Document.CreationTimestampMillis\n"
+                        + "    Long mCreationTimestampMillis;\n"
+                        + "    @Document.Score\n"
+                        + "    Integer mScore;\n"
+                        + "    @Document.TtlMillis\n"
+                        + "    private Long mTtlMillis;\n"
+                        + "    public Long getTtlMillis() {\n"
+                        + "        return mTtlMillis;\n"
+                        + "    }   \n"
+                        + "    public void setTtlMillis(Long ttlMillis) {\n"
+                        + "        mTtlMillis = ttlMillis;\n"
+                        + "    }   \n"
+                        + "    @Document.StringProperty\n"
+                        + "    String mString;\n"
+                        + "}\n");
+
+        checkEqualsGolden("Gift.java");
     }
 
     @Test
@@ -526,8 +538,8 @@ public class AppSearchCompilerTest {
                         + "}\n");
 
         assertThat(compilation).hadErrorContaining(
-                "Field cannot be read: it is private and we failed to find a suitable getter "
-                        + "for field \"price\"");
+                "Field 'price' cannot be read: it is private and has no suitable getters "
+                        + "[public] int price() OR [public] int getPrice()");
     }
 
     @Test
@@ -542,8 +554,8 @@ public class AppSearchCompilerTest {
                         + "}\n");
 
         assertThat(compilation).hadErrorContaining(
-                "Field cannot be read: it is private and we failed to find a suitable getter "
-                        + "for field \"price\"");
+                "Field 'price' cannot be read: it is private and has no suitable getters "
+                        + "[public] int price() OR [public] int getPrice()");
         assertThat(compilation).hadWarningContaining("Getter cannot be used: private visibility");
     }
 
@@ -559,8 +571,8 @@ public class AppSearchCompilerTest {
                         + "}\n");
 
         assertThat(compilation).hadErrorContaining(
-                "Field cannot be read: it is private and we failed to find a suitable getter "
-                        + "for field \"price\"");
+                "Field 'price' cannot be read: it is private and has no suitable getters "
+                        + "[public] int price() OR [public] int getPrice()");
         assertThat(compilation).hadWarningContaining(
                 "Getter cannot be used: should take no parameters");
     }
@@ -578,8 +590,25 @@ public class AppSearchCompilerTest {
                         + "}\n");
 
         assertThat(compilation).hadErrorContaining(
-                "Field cannot be read: it is private and we failed to find a suitable getter "
-                        + "for field \"price\"");
+                "Field 'price' cannot be read: it is private and has no suitable getters "
+                        + "[public] int price() OR [public] int getPrice()");
+    }
+
+    @Test
+    public void testCantRead_noSuitableBooleanGetter() {
+        Compilation compilation = compile(
+                "@Document\n"
+                        + "public class Gift {\n"
+                        + "  @Document.Namespace String namespace;\n"
+                        + "  @Document.Id String id;\n"
+                        + "  @Document.BooleanProperty private boolean wrapped;\n"
+                        + "}\n");
+
+        assertThat(compilation).hadErrorContaining(
+                "Field 'wrapped' cannot be read: it is private and has no suitable getters "
+                        + "[public] boolean isWrapped() "
+                        + "OR [public] boolean getWrapped() "
+                        + "OR [public] boolean wrapped()");
     }
 
     @Test
@@ -609,6 +638,29 @@ public class AppSearchCompilerTest {
                         + "  @Document.BooleanProperty private boolean forSale;\n"
                         + "  boolean isForSale() { return forSale; }"
                         + "  void setForSale(boolean forSale) {}"
+                        + "}\n");
+
+        assertThat(compilation).succeededWithoutWarnings();
+        checkEqualsGolden("Gift.java");
+    }
+
+    @Test
+    public void testRead_GetterReturnsSubtype() throws Exception {
+        Compilation compilation = compile(
+                "import java.util.*;\n"
+                        + "import com.google.common.collect.*;\n"
+                        + "@Document\n"
+                        + "public class Gift {\n"
+                        + "  @Document.Namespace String namespace;\n"
+                        + "  @Document.Id String id;\n"
+                        + "  @Document.StringProperty private List<String> from = \n"
+                        + "    new ArrayList<>();\n"
+                        + "  ImmutableList<String> getFrom() {"
+                        + "    return ImmutableList.copyOf(from);"
+                        + "  }"
+                        + "  void setFrom(Collection<String> from) {"
+                        + "    this.from = new ArrayList<>(from);"
+                        + "  }"
                         + "}\n");
 
         assertThat(compilation).succeededWithoutWarnings();
@@ -649,13 +701,17 @@ public class AppSearchCompilerTest {
                         + "}\n");
 
         assertThat(compilation).hadErrorContaining(
-                "Failed to find any suitable creation methods to build class "
-                        + "\"com.example.appsearch.Gift\"");
-        assertThat(compilation).hadWarningContainingMatch(
-                "Field cannot be written .* failed to find a suitable setter for \"price\"");
+                "Could not find a suitable constructor/factory method for "
+                        + "\"com.example.appsearch.Gift\" that covers properties: [price]. "
+                        + "See the warnings for more details.");
         assertThat(compilation).hadWarningContaining(
-                "Cannot use this creation method to construct the class: This method doesn't have "
-                        + "parameters for the following fields: [price]");
+                "Could not find any of the setter(s): "
+                        + "[public] void price(int)|"
+                        + "[public] void setPrice(int)");
+        assertThat(compilation).hadWarningContaining(
+                "Cannot use this constructor to construct the class: "
+                        + "\"com.example.appsearch.Gift\". "
+                        + "No parameters for the properties: [price]");
     }
 
     @Test
@@ -671,15 +727,15 @@ public class AppSearchCompilerTest {
                         + "}\n");
 
         assertThat(compilation).hadErrorContaining(
-                "Failed to find any suitable creation methods to build class "
-                        + "\"com.example.appsearch.Gift\"");
-        assertThat(compilation).hadWarningContainingMatch(
-                "Field cannot be written .* failed to find a suitable setter for \"price\"");
+                "Could not find a suitable constructor/factory method for "
+                        + "\"com.example.appsearch.Gift\" that covers properties: [price]. "
+                        + "See the warnings for more details.");
+        assertThat(compilation).hadWarningContaining(
+                "Could not find any of the setter(s): "
+                        + "[public] void price(int)|"
+                        + "[public] void setPrice(int)");
         assertThat(compilation).hadWarningContaining(
                 "Setter cannot be used: private visibility");
-        assertThat(compilation).hadWarningContaining(
-                "Cannot use this creation method to construct the class: This method doesn't have "
-                        + "parameters for the following fields: [price]");
     }
 
     @Test
@@ -695,15 +751,19 @@ public class AppSearchCompilerTest {
                         + "}\n");
 
         assertThat(compilation).hadErrorContaining(
-                "Failed to find any suitable creation methods to build class "
-                        + "\"com.example.appsearch.Gift\"");
-        assertThat(compilation).hadWarningContainingMatch(
-                "Field cannot be written .* failed to find a suitable setter for \"price\"");
+                "Could not find a suitable constructor/factory method for "
+                        + "\"com.example.appsearch.Gift\" that covers properties: [price]. "
+                        + "See the warnings for more details.");
+        assertThat(compilation).hadWarningContaining(
+                "Could not find any of the setter(s): "
+                        + "[public] void price(int)|"
+                        + "[public] void setPrice(int)");
         assertThat(compilation).hadWarningContaining(
                 "Setter cannot be used: takes 0 parameters instead of 1");
         assertThat(compilation).hadWarningContaining(
-                "Cannot use this creation method to construct the class: This method doesn't have "
-                        + "parameters for the following fields: [price]");
+                "Cannot use this constructor to construct the class: "
+                        + "\"com.example.appsearch.Gift\". "
+                        + "No parameters for the properties: [price]");
     }
 
     @Test
@@ -734,10 +794,9 @@ public class AppSearchCompilerTest {
                         + "  @Document.LongProperty int price;\n"
                         + "}\n");
 
-        assertThat(compilation).hadErrorContaining(
-                "Failed to find any suitable creation methods to build class "
-                        + "\"com.example.appsearch.Gift\"");
-        assertThat(compilation).hadWarningContaining("Creation method is private");
+        assertThat(compilation).hadErrorContaining("Could not find a suitable creation method");
+        assertThat(compilation).hadWarningContaining(
+                "Method cannot be used to create a document class: private visibility");
     }
 
     @Test
@@ -752,10 +811,17 @@ public class AppSearchCompilerTest {
                         + "}\n");
 
         assertThat(compilation).hadErrorContaining(
-                "Failed to find any suitable creation methods to build class "
-                        + "\"com.example.appsearch.Gift\"");
+                "Could not find a suitable constructor/factory method for "
+                        + "\"com.example.appsearch.Gift\" that covers properties: [id]. "
+                        + "See the warnings for more details.");
         assertThat(compilation).hadWarningContaining(
-                "doesn't have parameters for the following fields: [id]");
+                "Could not find any of the setter(s): "
+                        + "[public] void setId(java.lang.String)|"
+                        + "[public] void id(java.lang.String)");
+        assertThat(compilation).hadWarningContaining(
+                "Cannot use this constructor to construct the class: "
+                        + "\"com.example.appsearch.Gift\". "
+                        + "No parameters for the properties: [id]");
     }
 
     @Test
@@ -870,9 +936,7 @@ public class AppSearchCompilerTest {
                         + "  @Document.LongProperty int price;\n"
                         + "}\n");
 
-        assertThat(compilation).hadErrorContaining(
-                "Failed to find any suitable creation methods to build class "
-                        + "\"com.example.appsearch.Gift\"");
+        assertThat(compilation).hadErrorContaining("Could not find a suitable creation method");
         assertThat(compilation).hadWarningContaining(
                 "Parameter \"unknownParam\" is not an AppSearch parameter; don't know how to "
                         + "supply it");
@@ -1128,7 +1192,7 @@ public class AppSearchCompilerTest {
     }
 
     @Test
-    public void testInvalidLongPropertyIndexingType() throws Exception {
+    public void testInvalidLongPropertyIndexingType() {
         // AppSearchSchema requires Android and is not available in this desktop test, so we cheat
         // by using the integer constants directly.
         Compilation compilation = compile(
@@ -1160,7 +1224,7 @@ public class AppSearchCompilerTest {
     }
 
     @Test
-    public void testRepeatedPropertyJoinableType_throwsError() throws Exception {
+    public void testRepeatedPropertyJoinableType_throwsError() {
         Compilation compilation = compile(
                 "import java.util.*;\n"
                         + "@Document\n"
@@ -1223,7 +1287,6 @@ public class AppSearchCompilerTest {
                         + "  @BooleanProperty Boolean[] arrBoxBoolean;\n"   // 2a
                         + "  @BooleanProperty boolean[] arrUnboxBoolean;\n" // 2b
                         + "  @BytesProperty byte[][] arrUnboxByteArr;\n"  // 2b
-                        + "  @BytesProperty Byte[] boxByteArr;\n"         // 2a
                         + "  @StringProperty String[] arrString;\n"        // 2b
                         + "  @DocumentProperty Gift[] arrGift;\n"            // 2c
                         + "\n"
@@ -1259,8 +1322,8 @@ public class AppSearchCompilerTest {
                         + "}\n");
 
         assertThat(compilation).hadErrorContaining(
-                "Property Annotation androidx.appsearch.annotation.Document.BooleanProperty "
-                        + "doesn't accept the data type of property field arrString");
+                "@BooleanProperty must only be placed on a getter/field of type or array or "
+                        + "collection of boolean|java.lang.Boolean");
     }
 
     @Test
@@ -1271,10 +1334,11 @@ public class AppSearchCompilerTest {
                         + "public class Gift {\n"
                         + "  @Namespace String namespace;\n"
                         + "  @Id String id;\n"
-                        + "  @BytesProperty Collection<Byte[]> collectBoxByteArr;\n" // 1x
+                        + "  @BytesProperty Collection<Byte[]> collectBoxByteArr;\n"
                         + "}\n");
         assertThat(compilation).hadErrorContaining(
-                "Unhandled out property type (1x): java.util.Collection<java.lang.Byte[]>");
+                "@BytesProperty must only be placed on a getter/field of type or array or "
+                        + "collection of byte[]");
 
         compilation = compile(
                 "import java.util.*;\n"
@@ -1282,10 +1346,11 @@ public class AppSearchCompilerTest {
                         + "public class Gift {\n"
                         + "  @Namespace String namespace;\n"
                         + "  @Id String id;\n"
-                        + "  @BytesProperty Collection<Byte> collectByte;\n" // 1x
+                        + "  @BytesProperty Collection<Byte> collectByte;\n"
                         + "}\n");
         assertThat(compilation).hadErrorContaining(
-                "Unhandled out property type (1x): java.util.Collection<java.lang.Byte>");
+                "@BytesProperty must only be placed on a getter/field of type or array or "
+                        + "collection of byte[]");
 
         compilation = compile(
                 "import java.util.*;\n"
@@ -1293,10 +1358,11 @@ public class AppSearchCompilerTest {
                         + "public class Gift {\n"
                         + "  @Namespace String namespace;\n"
                         + "  @Id String id;\n"
-                        + "  @BytesProperty Byte[][] arrBoxByteArr;\n" // 2x
+                        + "  @BytesProperty Byte[][] arrBoxByteArr;\n"
                         + "}\n");
         assertThat(compilation).hadErrorContaining(
-                "Unhandled out property type (2x): java.lang.Byte[][]");
+                "@BytesProperty must only be placed on a getter/field of type or array or "
+                        + "collection of byte[]");
     }
 
     @Test
@@ -1377,8 +1443,8 @@ public class AppSearchCompilerTest {
                         + "  @Document\n"
                         + "  @AutoValue\n"
                         + "  abstract static class A {\n"
-                        + "    @CopyAnnotations @Document.Id abstract String id();\n"
                         + "    @CopyAnnotations @Document.Namespace abstract String namespace();\n"
+                        + "    @CopyAnnotations @Document.Id abstract String id();\n"
                         + "    public static A create(String id, String namespace) {\n"
                         + "      return new AutoValue_Gift_A(id, namespace);\n"
                         + "    }\n"
@@ -1396,6 +1462,38 @@ public class AppSearchCompilerTest {
                         + "@Document\n"
                         + "@AutoValue\n"
                         + "public abstract class Gift {\n"
+                        + "  @CopyAnnotations @Document.Namespace abstract String namespace();\n"
+                        + "  @CopyAnnotations @Document.Id abstract String id();\n"
+                        + "  @CopyAnnotations\n"
+                        + "  @Document.StringProperty abstract String property();\n"
+                        + "  public static Gift create(String id, String namespace, String"
+                        + " property) {\n"
+                        + "    return new AutoValue_Gift(id, namespace, property);\n"
+                        + "  }\n"
+                        + "}\n");
+
+        assertThat(compilation).succeededWithoutWarnings();
+        checkEqualsGolden("AutoValue_Gift.java");
+        checkDocumentMapEqualsGolden(/* roundIndex= */0);
+        // The number of rounds that the annotation processor takes can vary from setup to setup.
+        // In this test case, AutoValue documents are processed in the second round because their
+        // generated classes are not available in the first turn.
+        checkDocumentMapEqualsGolden(/* roundIndex= */1);
+    }
+
+    @Test
+    public void testAutoValueDocumentWithNormalDocument() throws IOException {
+        Compilation compilation = compile(
+                "import com.google.auto.value.AutoValue;\n"
+                        + "import com.google.auto.value.AutoValue.*;\n"
+                        + "@Document\n"
+                        + "class Person {\n"
+                        + "  @Document.Namespace String namespace;\n"
+                        + "  @Document.Id String id;\n"
+                        + "}\n"
+                        + "@Document\n"
+                        + "@AutoValue\n"
+                        + "public abstract class Gift {\n"
                         + "  @CopyAnnotations @Document.Id abstract String id();\n"
                         + "  @CopyAnnotations @Document.Namespace abstract String namespace();\n"
                         + "  @CopyAnnotations\n"
@@ -1408,6 +1506,11 @@ public class AppSearchCompilerTest {
 
         assertThat(compilation).succeededWithoutWarnings();
         checkEqualsGolden("AutoValue_Gift.java");
+        checkDocumentMapEqualsGolden(/* roundIndex= */0);
+        // The number of rounds that the annotation processor takes can vary from setup to setup.
+        // In this test case, AutoValue documents are processed in the second round because their
+        // generated classes are not available in the first turn.
+        checkDocumentMapEqualsGolden(/* roundIndex= */1);
     }
 
     @Test
@@ -1433,8 +1536,8 @@ public class AppSearchCompilerTest {
         Compilation compilation = compile(
                 "@Document\n"
                         + "public class Gift {\n"
-                        + "  @Document.Id private String mId;\n"
                         + "  @Document.Namespace private String mNamespace;\n"
+                        + "  @Document.Id private String mId;\n"
                         + "  public Gift(String id, String namespace, boolean nonAppSearchParam){\n"
                         + "    mId = id;\n"
                         + "    mNamespace = namespace;\n"
@@ -1556,6 +1659,7 @@ public class AppSearchCompilerTest {
         checkResultContains("Gift.java", "addParentType($$__AppSearch__Parent2.SCHEMA_NAME)");
 
         checkEqualsGolden("Gift.java");
+        checkDocumentMapEqualsGolden(/* roundIndex= */0);
     }
 
     @Test
@@ -1590,7 +1694,7 @@ public class AppSearchCompilerTest {
     }
 
     @Test
-    public void testPolymorphismOverrideExtendedPropertyInvalid() throws Exception {
+    public void testPolymorphismOverrideExtendedPropertyInvalid() {
         // Overridden properties cannot change the names.
         Compilation compilation = compile(
                 "@Document\n"
@@ -1614,7 +1718,8 @@ public class AppSearchCompilerTest {
                         + "note2;\n"
                         + "}\n");
         assertThat(compilation).hadErrorContaining(
-                "Cannot override a property with a different name");
+                "Property name within the annotation must stay consistent when "
+                        + "overriding annotated members but changed from 'note2' -> 'note2_new'");
 
         // Overridden properties cannot change the types.
         compilation = compile(
@@ -1637,7 +1742,8 @@ public class AppSearchCompilerTest {
                         + "  @LongProperty Long note2;\n"
                         + "}\n");
         assertThat(compilation).hadErrorContaining(
-                "Cannot override a property with a different type");
+                "Property type must stay consistent when overriding annotated "
+                        + "members but changed from @StringProperty -> @LongProperty");
     }
 
     @Test
@@ -1705,7 +1811,7 @@ public class AppSearchCompilerTest {
     }
 
     @Test
-    public void testPolymorphismChildTypeWithoutName() throws Exception {
+    public void testPolymorphismChildTypeWithoutName() {
         Compilation compilation = compile(
                 "@Document\n"
                         + "class Parent {\n"
@@ -1719,6 +1825,341 @@ public class AppSearchCompilerTest {
                         + "}\n");
         assertThat(compilation).hadErrorContaining(
                 "All @Document classes with a parent must explicitly provide a name");
+    }
+
+    @Test
+    public void testIndexableNestedPropertiesListSimple() throws Exception {
+        Compilation compilation = compile(
+                "@Document\n"
+                        + "class Address {\n"
+                        + "  @Document.Namespace String namespace;\n"
+                        + "  @Document.Id String id;\n"
+                        + "  @Document.LongProperty long streetNumber;\n"
+                        + "  @Document.StringProperty String streetName;\n"
+                        + "  @Document.StringProperty String state;\n"
+                        + "  @Document.LongProperty long zipCode;\n"
+                        + "}\n"
+                        + "@Document\n"
+                        + "class Person {\n"
+                        + "  @Document.Namespace String namespace;\n"
+                        + "  @Document.Id String id;\n"
+                        + "  @Document.StringProperty String name;\n"
+                        + "  @Document.DocumentProperty(indexableNestedPropertiesList ="
+                        + "    {\"streetNumber\", \"streetName\"}) Address livesAt;\n"
+                        + "}\n");
+        assertThat(compilation).succeededWithoutWarnings();
+
+        checkResultContains("Person.java", "addIndexableNestedProperties(\"streetNumber\")");
+        checkResultContains("Person.java", "addIndexableNestedProperties(\"streetName\")");
+
+        checkEqualsGolden("Person.java");
+    }
+
+    @Test
+    public void testIndexableNestedPropertiesListEmpty() throws Exception {
+        Compilation compilation = compile(
+                "@Document\n"
+                        + "class Address {\n"
+                        + "  @Document.Namespace String namespace;\n"
+                        + "  @Document.Id String id;\n"
+                        + "  @Document.LongProperty long streetNumber;\n"
+                        + "  @Document.StringProperty String streetName;\n"
+                        + "  @Document.StringProperty String state;\n"
+                        + "  @Document.LongProperty long zipCode;\n"
+                        + "}\n"
+                        + "@Document\n"
+                        + "class Person {\n"
+                        + "  @Document.Namespace String namespace;\n"
+                        + "  @Document.Id String id;\n"
+                        + "  @Document.StringProperty String name;\n"
+                        + "  @Document.DocumentProperty(indexableNestedPropertiesList = {})"
+                        + "  Address livesAt;\n"
+                        + "}\n");
+        assertThat(compilation).succeededWithoutWarnings();
+        checkResultDoesNotContain("Person.java", "addIndexableNestedProperties");
+        checkEqualsGolden("Person.java");
+    }
+
+    @Test
+    public void testIndexableNestedPropertiesListInheritSuperclassTrue() throws Exception {
+        Compilation compilation = compile(
+                "@Document\n"
+                        + "class Address {\n"
+                        + "  @Document.Namespace String namespace;\n"
+                        + "  @Document.Id String id;\n"
+                        + "  @Document.LongProperty long streetNumber;\n"
+                        + "  @Document.StringProperty String streetName;\n"
+                        + "  @Document.StringProperty String state;\n"
+                        + "  @Document.LongProperty long zipCode;\n"
+                        + "}\n"
+                        + "@Document\n"
+                        + "class Person {\n"
+                        + "  @Document.Namespace String namespace;\n"
+                        + "  @Document.Id String id;\n"
+                        + "  @Document.StringProperty String name;\n"
+                        + "  @Document.DocumentProperty(indexableNestedPropertiesList ="
+                        + "    {\"streetNumber\", \"streetName\"}) Address livesAt;\n"
+                        + "}\n"
+                        + "@Document(name = \"Artist\", parent = {Person.class})\n"
+                        + "class Artist extends Person {\n"
+                        + "  @Document.StringProperty String mostFamousWork;\n"
+                        + "  @Document.DocumentProperty("
+                        + "    indexableNestedPropertiesList = {\"state\"},"
+                        + "    inheritIndexableNestedPropertiesFromSuperclass = true)"
+                        + "  Address livesAt;\n"
+                        + "}\n");
+        assertThat(compilation).succeededWithoutWarnings();
+
+        checkResultContains("Artist.java", "addIndexableNestedProperties(\"streetNumber\")");
+        checkResultContains("Artist.java", "addIndexableNestedProperties(\"streetName\")");
+        checkResultContains("Artist.java", "addIndexableNestedProperties(\"state\")");
+
+        checkEqualsGolden("Artist.java");
+    }
+
+    @Test
+    public void testIndexableNestedPropertiesListInheritSuperclassFalse() throws Exception {
+        Compilation compilation = compile(
+                "@Document\n"
+                        + "class Address {\n"
+                        + "  @Document.Namespace String namespace;\n"
+                        + "  @Document.Id String id;\n"
+                        + "  @Document.LongProperty long streetNumber;\n"
+                        + "  @Document.StringProperty String streetName;\n"
+                        + "  @Document.StringProperty String state;\n"
+                        + "  @Document.LongProperty long zipCode;\n"
+                        + "}\n"
+                        + "@Document\n"
+                        + "class Person {\n"
+                        + "  @Document.Namespace String namespace;\n"
+                        + "  @Document.Id String id;\n"
+                        + "  @Document.StringProperty String name;\n"
+                        + "  @Document.DocumentProperty(indexableNestedPropertiesList ="
+                        + "    {\"streetNumber\", \"streetName\"}) Address livesAt;\n"
+                        + "}\n"
+                        + "@Document(name = \"Artist\", parent = {Person.class})\n"
+                        + "class Artist extends Person {\n"
+                        + "  @Document.StringProperty String mostFamousWork;\n"
+                        + "  @Document.DocumentProperty("
+                        + "    indexableNestedPropertiesList = {\"state\"},"
+                        + "    inheritIndexableNestedPropertiesFromSuperclass = false)"
+                        + "  Address livesAt;\n"
+                        + "}\n");
+        assertThat(compilation).succeededWithoutWarnings();
+
+        checkResultContains("Artist.java", "addIndexableNestedProperties(\"state\")");
+        checkResultDoesNotContain("Artist.java", "addIndexableNestedProperties(\"streetNumber\")");
+        checkResultDoesNotContain("Artist.java", "addIndexableNestedProperties(\"streetName\")");
+
+        checkEqualsGolden("Artist.java");
+    }
+
+    @Test
+    public void testIndexableNestedPropertiesListInheritWithMultipleParentsClasses()
+            throws Exception {
+        // Tests that the child class inherits nested properties from the parent correctly. When
+        // set to true, the field overridden by the child class should only inherit indexable
+        // nested properties form its java parent class (i.e. the superclass/interface which the
+        // child class extends from/implements).
+        // In this test case, Artist's parent class is Person, and ArtistEmployee's parent class
+        // is Artist. This means that ArtistEmployee.livesAt's indexable list should contain the
+        // properties s specified in Artist.livesAt. and Person.livesAt (since both Artist and
+        // ArtistEmployee sets inheritFromParent=true for this field). ArtistEmployee.livesAt
+        // should not inherit the indexable list from Employee.livesAt since Employee is not
+        // ArtistEmployee's java class parent.
+        Compilation compilation = compile(
+                "@Document\n"
+                        + "class Address {\n"
+                        + "  @Document.Namespace String namespace;\n"
+                        + "  @Document.Id String id;\n"
+                        + "  @Document.LongProperty long streetNumber;\n"
+                        + "  @Document.StringProperty String streetName;\n"
+                        + "  @Document.StringProperty String state;\n"
+                        + "  @Document.LongProperty long zipCode;\n"
+                        + "}\n"
+                        + "@Document\n"
+                        + "class Person {\n"
+                        + "  @Document.Namespace String namespace;\n"
+                        + "  @Document.Id String id;\n"
+                        + "  @Document.StringProperty String name;\n"
+                        + "  @Document.DocumentProperty(indexableNestedPropertiesList ="
+                        + "    {\"streetNumber\", \"streetName\"}) Address livesAt;\n"
+                        + "}\n"
+                        + "@Document(name = \"Artist\", parent = {Person.class})\n"
+                        + "class Artist extends Person {\n"
+                        + "  @Document.StringProperty String mostFamousWork;\n"
+                        + "  @Document.DocumentProperty("
+                        + "    indexableNestedPropertiesList = {\"state\"},"
+                        + "    inheritIndexableNestedPropertiesFromSuperclass = true)"
+                        + "  Address livesAt;\n"
+                        + "}\n"
+                        + "@Document(name = \"Employee\", parent = {Person.class})\n"
+                        + "class Employee extends Person {\n"
+                        + "  @Document.DocumentProperty("
+                        + "    indexableNestedPropertiesList = {\"zipCode\"},"
+                        + "    inheritIndexableNestedPropertiesFromSuperclass = true)"
+                        + "  Address livesAt;\n"
+                        + "  @Document.DocumentProperty(indexableNestedPropertiesList ="
+                        + "    {\"zipCode\", \"streetName\"}) Address worksAt;\n"
+                        + "}\n"
+                        + "@Document(name = \"ArtistEmployee\", parent = {Artist.class,"
+                        + "Employee.class})\n"
+                        + "class ArtistEmployee extends Artist {\n"
+                        + "  @Document.StringProperty String mostFamousWork;\n"
+                        + "  @Document.DocumentProperty("
+                        + "    inheritIndexableNestedPropertiesFromSuperclass = true)"
+                        + "  Address livesAt;\n"
+                        + "}\n");
+        assertThat(compilation).succeededWithoutWarnings();
+
+        checkResultContains("ArtistEmployee.java",
+                "addIndexableNestedProperties(\"streetNumber\")");
+        checkResultContains("ArtistEmployee.java", "addIndexableNestedProperties(\"streetName\")");
+        checkResultContains("ArtistEmployee.java", "addIndexableNestedProperties(\"state\")");
+        // ArtistEmployee's indexable list should not contain 'zipCode' as  ArtistEmployee only
+        // extends Artist, which does not index zipCode
+        checkResultDoesNotContain("ArtistEmployee.java",
+                "addIndexableNestedProperties(\"zipCode\")");
+
+        checkEqualsGolden("ArtistEmployee.java");
+    }
+
+    @Test
+    public void testIndexableNestedPropertiesListImplicitInheritance() throws Exception {
+        // Tests that properties that are not declared in the child class itself but exists in
+        // the class due to java class inheritance indexes the correct indexable list.
+        // Artist.livesAt should be defined for Artist and index the same indexable properties as
+        // Person.livesAt.
+        Compilation compilation = compile(
+                "@Document\n"
+                        + "class Address {\n"
+                        + "  @Document.Namespace String namespace;\n"
+                        + "  @Document.Id String id;\n"
+                        + "  @Document.LongProperty long streetNumber;\n"
+                        + "  @Document.StringProperty String streetName;\n"
+                        + "  @Document.StringProperty String state;\n"
+                        + "  @Document.LongProperty long zipCode;\n"
+                        + "}\n"
+                        + "@Document\n"
+                        + "class Person {\n"
+                        + "  @Document.Namespace String namespace;\n"
+                        + "  @Document.Id String id;\n"
+                        + "  @Document.StringProperty String name;\n"
+                        + "  @Document.DocumentProperty(indexableNestedPropertiesList ="
+                        + "    {\"streetNumber\", \"streetName\"}) Address livesAt;\n"
+                        + "}\n"
+                        + "@Document(name = \"Artist\", parent = {Person.class})\n"
+                        + "class Artist extends Person {\n"
+                        + "  @Document.StringProperty String mostFamousWork;\n"
+                        + "}\n");
+        assertThat(compilation).succeededWithoutWarnings();
+
+        checkResultContains("Artist.java",
+                "addIndexableNestedProperties(\"streetNumber\")");
+        checkResultContains("Artist.java", "addIndexableNestedProperties(\"streetName\")");
+
+        checkResultDoesNotContain("Artist.java",
+                "addIndexableNestedProperties(\"zipCode\")");
+        checkResultDoesNotContain("Artist.java", "addIndexableNestedProperties(\"state\")");
+
+        checkEqualsGolden("Artist.java");
+    }
+
+    @Test
+    public void testIndexableNestedPropertiesListImplicitlyInheritFromMultipleLevels()
+            throws Exception {
+        // Tests that the indexable list is inherited correctly across multiple java inheritance
+        // levels.
+        // ArtistEmployee.livesAt should index the nested properties defined in Person.livesAt.
+        Compilation compilation = compile(
+                "@Document\n"
+                        + "class Address {\n"
+                        + "  @Document.Namespace String namespace;\n"
+                        + "  @Document.Id String id;\n"
+                        + "  @Document.LongProperty long streetNumber;\n"
+                        + "  @Document.StringProperty String streetName;\n"
+                        + "  @Document.StringProperty String state;\n"
+                        + "  @Document.LongProperty long zipCode;\n"
+                        + "}\n"
+                        + "@Document\n"
+                        + "class Person {\n"
+                        + "  @Document.Namespace String namespace;\n"
+                        + "  @Document.Id String id;\n"
+                        + "  @Document.StringProperty String name;\n"
+                        + "  @Document.DocumentProperty(indexableNestedPropertiesList ="
+                        + "    {\"streetNumber\", \"streetName\"}) Address livesAt;\n"
+                        + "}\n"
+                        + "@Document(name = \"Artist\", parent = {Person.class})\n"
+                        + "class Artist extends Person {\n"
+                        + "  @Document.StringProperty String mostFamousWork;\n"
+                        + "}\n"
+                        + "@Document(name = \"ArtistEmployee\", parent = {Artist.class})\n"
+                        + "class ArtistEmployee extends Artist {\n"
+                        + "  @Document.StringProperty String worksAt;\n"
+                        + "  @Document.DocumentProperty("
+                        + "    inheritIndexableNestedPropertiesFromSuperclass = true)"
+                        + "  Address livesAt;\n"
+                        + "}\n");
+        assertThat(compilation).succeededWithoutWarnings();
+
+        checkResultContains("ArtistEmployee.java",
+                "addIndexableNestedProperties(\"streetNumber\")");
+        checkResultContains("ArtistEmployee.java", "addIndexableNestedProperties(\"streetName\")");
+
+        checkResultDoesNotContain("ArtistEmployee.java",
+                "addIndexableNestedProperties(\"zipCode\")");
+        checkResultDoesNotContain("ArtistEmployee.java", "addIndexableNestedProperties(\"state\")");
+
+        checkEqualsGolden("ArtistEmployee.java");
+    }
+
+    @Test
+    public void testIndexableNestedPropertiesListTopLevelInheritTrue() throws Exception {
+        Compilation compilation = compile(
+                "@Document\n"
+                        + "class Address {\n"
+                        + "  @Document.Namespace String namespace;\n"
+                        + "  @Document.Id String id;\n"
+                        + "  @Document.LongProperty long streetNumber;\n"
+                        + "  @Document.StringProperty String streetName;\n"
+                        + "  @Document.StringProperty String state;\n"
+                        + "  @Document.LongProperty long zipCode;\n"
+                        + "}\n"
+                        + "@Document\n"
+                        + "class Person {\n"
+                        + "  @Document.Namespace String namespace;\n"
+                        + "  @Document.Id String id;\n"
+                        + "  @Document.StringProperty String name;\n"
+                        + "  @Document.DocumentProperty(indexableNestedPropertiesList ="
+                        + "    {\"streetNumber\", \"streetName\"},"
+                        + "    inheritIndexableNestedPropertiesFromSuperclass = true)"
+                        + "  Address livesAt;\n"
+                        + "}\n"
+                        + "@Document(name = \"Artist\", parent = {Person.class})\n"
+                        + "class Artist extends Person {\n"
+                        + "  @Document.StringProperty String mostFamousWork;\n"
+                        + "  @Document.DocumentProperty(indexableNestedPropertiesList ="
+                        + "    {\"state\"}, inheritIndexableNestedPropertiesFromSuperclass = true)"
+                        + "  Address livesAt;\n"
+                        + "}\n"
+                        + "@Document(name = \"ArtistEmployee\", parent = {Artist.class})\n"
+                        + "class ArtistEmployee extends Artist {\n"
+                        + "  @Document.StringProperty String worksAt;\n"
+                        + "  @Document.DocumentProperty("
+                        + "    inheritIndexableNestedPropertiesFromSuperclass = true)"
+                        + "  Address livesAt;\n"
+                        + "}\n");
+        assertThat(compilation).succeededWithoutWarnings();
+
+        checkResultContains("ArtistEmployee.java",
+                "addIndexableNestedProperties(\"streetNumber\")");
+        checkResultContains("ArtistEmployee.java", "addIndexableNestedProperties(\"streetName\")");
+        checkResultContains("ArtistEmployee.java", "addIndexableNestedProperties(\"state\")");
+
+        checkResultDoesNotContain("ArtistEmployee.java",
+                "addIndexableNestedProperties(\"zipCode\")");
+
+        checkEqualsGolden("ArtistEmployee.java");
     }
 
     @Test
@@ -1799,7 +2240,7 @@ public class AppSearchCompilerTest {
     }
 
     @Test
-    public void testAnnotationOnGetterWithoutFactory() throws Exception {
+    public void testAnnotationOnGetterWithoutFactory() {
         // An interface without any factory method is not able to initialize, as interfaces do
         // not have constructors.
         Compilation compilation = compile(
@@ -1811,11 +2252,11 @@ public class AppSearchCompilerTest {
                         + "  public void setPrice(int price);\n"
                         + "}\n");
 
-        assertThat(compilation).hadErrorContaining("Failed to find any suitable creation methods");
+        assertThat(compilation).hadErrorContaining("Could not find a suitable creation method");
     }
 
     @Test
-    public void testAnnotationOnGetterWithoutSetter() throws Exception {
+    public void testAnnotationOnGetterWithoutSetter() {
         Compilation compilation = compile(
                 "@Document\n"
                         + "public interface Gift {\n"
@@ -1840,7 +2281,56 @@ public class AppSearchCompilerTest {
                         + "}\n");
 
         assertThat(compilation).hadWarningContaining(
-                "Element cannot be written directly because it is an annotated getter");
+                "Cannot use this creation method to construct the class: "
+                        + "\"com.example.appsearch.Gift\". "
+                        + "No parameters for the properties: [getPrice]");
+        assertThat(compilation).hadWarningContaining(
+                "Could not find any of the setter(s): "
+                        + "[public] void namespace(java.lang.String)|"
+                        + "[public] void setNamespace(java.lang.String)");
+        assertThat(compilation).hadWarningContaining(
+                "Could not find any of the setter(s): "
+                        + "[public] void setId(java.lang.String)|"
+                        + "[public] void id(java.lang.String)");
+        assertThat(compilation).hadWarningContaining(
+                "Could not find any of the setter(s): "
+                        + "[public] void price(int)|"
+                        + "[public] void setPrice(int)");
+    }
+
+    @Test
+    public void testInterfaceAsNestedDocument() throws Exception {
+        Compilation compilation = compile(
+                "@Document\n"
+                        + "interface Thing {\n"
+                        + "  public static Thing create(String id, String namespace) {\n"
+                        + "    return new ThingImpl(id, namespace);\n"
+                        + "  }\n"
+                        + "  @Document.Namespace public String getNamespace();\n"
+                        + "  @Document.Id public String getId();\n"
+                        + "}\n"
+                        + "class ThingImpl implements Thing {\n"
+                        + "  public ThingImpl(String id, String namespace) {\n"
+                        + "    this.id = id;\n"
+                        + "    this.namespace = namespace;\n"
+                        + "  }\n"
+                        + "  private String namespace;\n"
+                        + "  private String id;\n"
+                        + "  public String getNamespace() { return namespace; }\n"
+                        + "  public String getId() { return id; }\n"
+                        + "}\n"
+                        + "@Document\n"
+                        + "public class Gift {\n"
+                        + "  @Document.Namespace String namespace;\n"
+                        + "  @Document.Id String id;\n"
+                        + "  @Document.DocumentProperty Thing thing;\n"
+                        + "}\n");
+        assertThat(compilation).succeededWithoutWarnings();
+        checkResultContains("Thing.java",
+                "Thing document = Thing.create(getIdConv, getNamespaceConv)");
+        checkResultContains("Gift.java",
+                "thingConv = thingCopy.toDocumentClass(Thing.class, documentClassMap)");
+        checkEqualsGolden("Gift.java");
     }
 
     @Test
@@ -1899,6 +2389,7 @@ public class AppSearchCompilerTest {
         checkResultContains("Gift.java", "document.getStr2()");
         checkResultContains("Gift.java", "document.getPrice()");
         checkEqualsGolden("Gift.java");
+        checkDocumentMapEqualsGolden(/* roundIndex= */0);
     }
 
     @Test
@@ -1953,22 +2444,14 @@ public class AppSearchCompilerTest {
                         + "  @Document.LongProperty(name=\"price2\")\n"
                         + "  public int price;\n"
                         + "}\n");
-        assertThat(compilation).succeededWithoutWarnings();
-        checkResultContains("Gift.java",
-                "new AppSearchSchema.LongPropertyConfig.Builder(\"price1\")");
-        checkResultContains("Gift.java",
-                "new AppSearchSchema.LongPropertyConfig.Builder(\"price2\")");
-        checkResultContains("Gift.java", "document.setPrice(getPriceConv)");
-        checkResultContains("Gift.java", "document.price = priceConv");
-        checkResultContains("Gift.java",
-                "builder.setPropertyLong(\"price1\", document.getPrice())");
-        checkResultContains("Gift.java",
-                "builder.setPropertyLong(\"price2\", document.price)");
-        checkEqualsGolden("Gift.java");
+        assertThat(compilation).hadErrorContaining(
+                "Normalized name \"price\" is already taken up by pre-existing "
+                        + "int Gift#getPrice(). "
+                        + "Please rename this getter/field to something else.");
     }
 
     @Test
-    public void testSameNameGetterAndFieldAnnotatingBothButGetterIsPrivate() throws Exception {
+    public void testSameNameGetterAndFieldAnnotatingBothButGetterIsPrivate() {
         Compilation compilation = compile(
                 "@Document\n"
                         + "public class Gift {\n"
@@ -1984,50 +2467,6 @@ public class AppSearchCompilerTest {
                 "Failed to find a suitable getter for element \"getPrice\"");
         assertThat(compilation).hadWarningContaining(
                 "Getter cannot be used: private visibility");
-    }
-
-    @Test
-    public void testSameNameGetterAndFieldAnnotatingBothWithDifferentType() throws Exception {
-        Compilation compilation = compile(
-                "@Document\n"
-                        + "public class Gift {\n"
-                        + "  @Document.Namespace String namespace;\n"
-                        + "  @Document.Id String id;\n"
-                        + "  @Document.DoubleProperty(name=\"price1\")\n"
-                        + "  public double getPrice() { return 0.2; }\n"
-                        + "  public void setPrice(double price) {}\n"
-                        + "  @Document.LongProperty(name=\"price2\")\n"
-                        + "  public int price;\n"
-                        + "}\n");
-        assertThat(compilation).succeededWithoutWarnings();
-        checkResultContains("Gift.java",
-                "new AppSearchSchema.DoublePropertyConfig.Builder(\"price1\")");
-        checkResultContains("Gift.java",
-                "new AppSearchSchema.LongPropertyConfig.Builder(\"price2\")");
-        checkResultContains("Gift.java", "document.setPrice(getPriceConv)");
-        checkResultContains("Gift.java", "document.price = priceConv");
-        checkResultContains("Gift.java",
-                "builder.setPropertyDouble(\"price1\", document.getPrice())");
-        checkResultContains("Gift.java",
-                "builder.setPropertyLong(\"price2\", document.price)");
-        checkEqualsGolden("Gift.java");
-    }
-
-    @Test
-    public void testSameNameGetterAndFieldAnnotatingBothWithoutSetter() throws Exception {
-        Compilation compilation = compile(
-                "@Document\n"
-                        + "public class Gift {\n"
-                        + "  @Document.Namespace String namespace;\n"
-                        + "  @Document.Id String id;\n"
-                        + "  @Document.LongProperty(name=\"price1\")\n"
-                        + "  public int getPrice() { return 0; }\n"
-                        + "  @Document.LongProperty(name=\"price2\")\n"
-                        + "  public int price;\n"
-                        + "}\n");
-        // Cannot find a setter method for the price1 field.
-        assertThat(compilation).hadErrorContaining(
-                "Failed to find any suitable creation methods");
     }
 
     @Test
@@ -2082,7 +2521,7 @@ public class AppSearchCompilerTest {
     }
 
     @Test
-    public void testGetterWithParameterCannotBeUsed() throws Exception {
+    public void testGetterWithParameterCannotBeUsed() {
         Compilation compilation = compile(
                 "@Document\n"
                         + "public class Gift {\n"
@@ -2099,7 +2538,7 @@ public class AppSearchCompilerTest {
     }
 
     @Test
-    public void testPrivateGetterCannotBeUsed() throws Exception {
+    public void testPrivateGetterCannotBeUsed() {
         Compilation compilation = compile(
                 "@Document\n"
                         + "public class Gift {\n"
@@ -2138,18 +2577,19 @@ public class AppSearchCompilerTest {
     }
 
     @Test
-    public void testGetterWithWrongReturnType() throws Exception {
+    public void testGetterWithWrongReturnType() {
         Compilation compilation = compile(
                 "@Document\n"
                         + "public class Gift {\n"
                         + "  @Document.Namespace String namespace;\n"
                         + "  @Document.Id String id;\n"
                         + "  @Document.StringProperty\n"
-                        + "  private int getPrice() { return 0; }\n"
+                        + "  public int getPrice() { return 0; }\n"
                         + "  public void setPrice(int price) {}\n"
                         + "}\n");
         assertThat(compilation).hadErrorContaining(
-                "Document.StringProperty doesn't accept the data type of property field getPrice");
+                "@StringProperty must only be placed on a getter/field of type or array or "
+                        + "collection of java.lang.String");
     }
 
     public void testCyclicalSchema() throws Exception {
@@ -2235,6 +2675,48 @@ public class AppSearchCompilerTest {
         checkResultContains("Gift.java", "builder.setPrice(getPriceConv)");
         checkResultContains("Gift.java", "builder.build()");
         checkEqualsGolden("Gift.java");
+    }
+
+    @Test
+    public void testBuilderThatUsesGenerics() throws Exception {
+        Compilation compilation = compile(
+                "@Document\n"
+                        + "public class Gift {\n"
+                        + "  @Document.Namespace private final String mNamespace;\n"
+                        + "  @Document.Id private final String mId;\n"
+                        + "  private Gift(String namespace, String id) {\n"
+                        + "    mNamespace = namespace;\n"
+                        + "    mId = id;\n"
+                        + "  }\n"
+                        + "  public String getNamespace() { return mNamespace; }\n"
+                        + "  public String getId() { return mId; }\n"
+                        + "  public static abstract class BaseBuilder<T> {\n"
+                        + "    public final T build() { return buildInternal(false); }\n"
+                        + "    // Give this a param to have zero methods with the signature\n"
+                        + "    // () -> DocumentClass\n"
+                        + "    protected abstract T buildInternal(boolean ignore);\n"
+                        + "  }\n"
+                        + "  @Document.BuilderProducer\n"
+                        + "  public static class Builder extends BaseBuilder<Gift> {\n"
+                        + "    private String mNamespace = \"\";\n"
+                        + "    private String mId = \"\";\n"
+                        + "    @Override\n"
+                        + "    protected Gift buildInternal(boolean ignore) {\n"
+                        + "      return new Gift(mNamespace, mId);\n"
+                        + "    }\n"
+                        + "    public Builder setNamespace(String namespace) {\n"
+                        + "      mNamespace = namespace;\n"
+                        + "      return this;\n"
+                        + "    }\n"
+                        + "    public Builder setId(String id) {\n"
+                        + "      mId = id;\n"
+                        + "      return this;\n"
+                        + "    }\n"
+                        + "  }\n"
+                        + "}");
+        assertThat(compilation).succeededWithoutWarnings();
+        checkResultContains("Gift.java", "Gift.Builder builder = new Gift.Builder()");
+        checkResultContains("Gift.java", "return builder.build()");
     }
 
     @Test
@@ -2484,7 +2966,7 @@ public class AppSearchCompilerTest {
     }
 
     @Test
-    public void testCreationByBuilderErrors() throws Exception {
+    public void testCreationByBuilderErrors() {
         // Cannot have multiple builder producer
         Compilation compilation = compile(
                 "@Document\n"
@@ -2695,16 +3177,315 @@ public class AppSearchCompilerTest {
                         + "    return new Gift();\n"
                         + "  }\n"
                         + "}\n");
+        assertThat(compilation).hadErrorContaining(
+                "Could not find a suitable builder producer for "
+                        + "\"com.example.appsearch.Gift\" that covers properties: [price]. "
+                        + "See the warnings for more details.");
         assertThat(compilation).hadWarningContaining(
-                "Element cannot be written directly because a builder producer is provided, and "
-                        + "we failed to find a suitable setter");
+                "Could not find any of the setter(s): "
+                        + "[public] void price(int)|"
+                        + "[public] void setPrice(int)");
+        assertThat(compilation).hadWarningContaining(
+                "Cannot use this creation method to construct the class: "
+                        + "\"com.example.appsearch.Gift\". "
+                        + "No parameters for the properties: [price]");
+    }
+
+    @Test
+    public void testAbstractConstructor() {
+        Compilation compilation = compile(
+                "@Document\n"
+                        + "public abstract class Gift {\n"
+                        + "  @Document.Namespace String namespace;\n"
+                        + "  @Document.Id String id;\n"
+                        + "  public Gift() {}\n"
+                        + "}\n");
+        assertThat(compilation).hadErrorContaining("Could not find a suitable creation method");
+        assertThat(compilation).hadWarningContaining(
+                "Method cannot be used to create a document class: abstract constructor");
+    }
+
+    @Test
+    public void testDocumentClassesWithDuplicatedNames() throws Exception {
+        Compilation compilation = compile(
+                "@Document(name=\"A\")\n"
+                        + "class MyClass1 {\n"
+                        + "  @Document.Namespace String namespace;\n"
+                        + "  @Document.Id String id;\n"
+                        + "}\n"
+                        + "@Document(name=\"A\")\n"
+                        + "class MyClass2 {\n"
+                        + "  @Document.Namespace String namespace;\n"
+                        + "  @Document.Id String id;\n"
+                        + "}\n"
+                        + "@Document(name=\"B\")\n"
+                        + "class MyClass3 {\n"
+                        + "  @Document.Namespace String namespace;\n"
+                        + "  @Document.Id String id;\n"
+                        + "}\n");
+        assertThat(compilation).succeededWithoutWarnings();
+        checkDocumentMapEqualsGolden(/* roundIndex= */0);
+    }
+
+    @Test
+    public void testStringSerializer() throws Exception {
+        Compilation compilation = compile(
+                "import androidx.appsearch.app.StringSerializer;\n"
+                        + "import java.net.URL;\n"
+                        + "import java.net.MalformedURLException;\n"
+                        + "import java.util.List;\n"
+                        + "@Document\n"
+                        + "class Gift {\n"
+                        + "    @Document.Id String mId;\n"
+                        + "    @Document.Namespace String mNamespace;\n"
+                        + "    @Document.StringProperty(\n"
+                        + "        serializer = UrlAsStringSerializer.class\n"
+                        + "    )\n"
+                        + "    URL mUrl;\n"
+                        + "    @Document.StringProperty(\n"
+                        + "        serializer = UrlAsStringSerializer.class\n"
+                        + "    )\n"
+                        + "    List<URL> mUrlList;\n"
+                        + "    @Document.StringProperty(\n"
+                        + "        serializer = UrlAsStringSerializer.class\n"
+                        + "    )\n"
+                        + "    URL[] mUrlArr;\n"
+                        + "    static class UrlAsStringSerializer \n"
+                        + "            implements StringSerializer<URL> {\n"
+                        + "        @Override\n"
+                        + "        public String serialize(URL url) {\n"
+                        + "            return url.toString();\n"
+                        + "        }\n"
+                        + "        @Override\n"
+                        + "        public URL deserialize(String string) {\n"
+                        + "            try {\n"
+                        + "                return new URL(string);\n"
+                        + "            } catch (MalformedURLException e) {\n"
+                        + "                return null;\n"
+                        + "            }\n"
+                        + "        }\n"
+                        + "    }\n"
+                        + "}"
+        );
+        assertThat(compilation).succeededWithoutWarnings();
+        checkEqualsGolden("Gift.java");
+        checkResultContains(
+                "Gift.java",
+                "Gift.UrlAsStringSerializer serializer = new Gift.UrlAsStringSerializer()");
+        checkResultContains("Gift.java", "String mUrlConv = serializer.serialize(mUrlCopy)");
+        checkResultContains(
+                "Gift.java", "mUrlConv = new Gift.UrlAsStringSerializer().deserialize(mUrlCopy)");
+        checkResultContains("Gift.java", "mUrlListConv[i++] = serializer.serialize(item)");
+        checkResultContains("Gift.java", "URL elem = serializer.deserialize(mUrlListCopy[i])");
+        checkResultContains("Gift.java", "mUrlArrConv[i] = serializer.serialize(mUrlArrCopy[i])");
+        checkResultContains("Gift.java", "URL elem = serializer.deserialize(mUrlArrCopy[i])");
+    }
+
+    @Test
+    public void testLongSerializer() throws Exception {
+        Compilation compilation = compile(
+                "import androidx.appsearch.app.LongSerializer;\n"
+                        + "import java.util.Arrays;\n"
+                        + "import java.util.List;\n"
+                        + "@Document\n"
+                        + "class Gift {\n"
+                        + "    @Document.Id String mId;\n"
+                        + "    @Document.Namespace String mNamespace;\n"
+                        + "    @Document.LongProperty(\n"
+                        + "        serializer = PricePointAsOrdinalSerializer.class\n"
+                        + "    )\n"
+                        + "    PricePoint mPricePoint;\n"
+                        + "    @Document.LongProperty(\n"
+                        + "        serializer = PricePointAsOrdinalSerializer.class\n"
+                        + "    )\n"
+                        + "    List<PricePoint> mPricePointList;\n"
+                        + "    @Document.LongProperty(\n"
+                        + "        serializer = PricePointAsOrdinalSerializer.class\n"
+                        + "    )\n"
+                        + "    PricePoint[] mPricePointArr;\n"
+                        + "    enum PricePoint { LOW, MID, HIGH }\n"
+                        + "    static class PricePointAsOrdinalSerializer \n"
+                        + "            implements LongSerializer<PricePoint> {\n"
+                        + "        @Override\n"
+                        + "        public long serialize(PricePoint pricePoint) {\n"
+                        + "            return pricePoint.ordinal();\n"
+                        + "        }\n"
+                        + "        @Override\n"
+                        + "        public PricePoint deserialize(long l) {\n"
+                        + "            return Arrays.stream(PricePoint.values())\n"
+                        + "                    .filter(pp -> pp.ordinal() == l)\n"
+                        + "                    .findFirst()\n"
+                        + "                    .orElse(null);\n"
+                        + "        }\n"
+                        + "    }\n"
+                        + "}"
+        );
+        assertThat(compilation).succeededWithoutWarnings();
+        checkEqualsGolden("Gift.java");
+        checkResultContains(
+                "Gift.java",
+                "Gift.PricePointAsOrdinalSerializer serializer = "
+                        + "new Gift.PricePointAsOrdinalSerializer()");
+        checkResultContains(
+                "Gift.java",
+                "mPricePointConv = "
+                        + "new Gift.PricePointAsOrdinalSerializer().deserialize(mPricePointCopy)");
+        checkResultContains(
+                "Gift.java", "long mPricePointConv = serializer.serialize(mPricePointCopy)");
+        checkResultContains(
+                "Gift.java",
+                "Gift.PricePoint elem = serializer.deserialize(mPricePointListCopy[i])");
+        checkResultContains("Gift.java", "mPricePointListConv[i++] = serializer.serialize(item)");
+        checkResultContains(
+                "Gift.java", "mPricePointArrConv[i] = serializer.serialize(mPricePointArrCopy[i])");
+        checkResultContains(
+                "Gift.java",
+                "Gift.PricePoint elem = serializer.deserialize(mPricePointArrCopy[i])");
+    }
+
+    @Test
+    public void testSerializerWithoutDefaultConstructor() {
+        Compilation compilation = compile(
+                "import androidx.appsearch.app.LongSerializer;\n"
+                        + "import java.time.Instant;\n"
+                        + "@Document\n"
+                        + "class Gift {\n"
+                        + "    @Document.Id\n"
+                        + "    String mId = null;\n"
+                        + "    @Document.Namespace\n"
+                        + "    String mNamespace = null;\n"
+                        + "    @Document.LongProperty(\n"
+                        + "        serializer = InstantAsEpochMillisSerializer.class\n"
+                        + "    )\n"
+                        + "    Instant mPurchaseTimeStamp = null;\n"
+                        + "    final static class InstantAsEpochMillisSerializer \n"
+                        + "            implements LongSerializer<Instant> {\n"
+                        + "        InstantAsEpochMillisSerializer(boolean someParam) {}\n"
+                        + "        @Override\n"
+                        + "        public long serialize(Instant instant) {\n"
+                        + "            return instant.toEpochMilli();\n"
+                        + "        }\n"
+                        + "        @Override\n"
+                        + "        public Instant deserialize(long l) {\n"
+                        + "            return Instant.ofEpochMilli(l);\n"
+                        + "        }\n"
+                        + "    }\n"
+                        + "}"
+        );
+        assertThat(compilation).hadErrorContaining(
+                "Serializer com.example.appsearch.Gift.InstantAsEpochMillisSerializer must have a "
+                        + "zero-param constructor");
+    }
+
+    @Test
+    public void testSerializerWithPrivateDefaultConstructor() {
+        Compilation compilation = compile(
+                "import androidx.appsearch.app.LongSerializer;\n"
+                        + "import java.time.Instant;\n"
+                        + "@Document\n"
+                        + "class Gift {\n"
+                        + "    @Document.Id\n"
+                        + "    String mId = null;\n"
+                        + "    @Document.Namespace\n"
+                        + "    String mNamespace = null;\n"
+                        + "    @Document.LongProperty(\n"
+                        + "        serializer = InstantAsEpochMillisSerializer.class\n"
+                        + "    )\n"
+                        + "    Instant mPurchaseTimeStamp = null;\n"
+                        + "    final static class InstantAsEpochMillisSerializer \n"
+                        + "            implements LongSerializer<Instant> {\n"
+                        + "        private InstantAsEpochMillisSerializer() {}\n"
+                        + "        @Override\n"
+                        + "        public long serialize(Instant instant) {\n"
+                        + "            return instant.toEpochMilli();\n"
+                        + "        }\n"
+                        + "        @Override\n"
+                        + "        public Instant deserialize(long l) {\n"
+                        + "            return Instant.ofEpochMilli(l);\n"
+                        + "        }\n"
+                        + "    }\n"
+                        + "}"
+        );
+        assertThat(compilation).hadErrorContaining(
+                "The zero-param constructor of serializer "
+                        + "com.example.appsearch.Gift.InstantAsEpochMillisSerializer must not "
+                        + "be private");
+    }
+
+    @Test
+    public void testPropertyTypeDoesNotMatchSerializer() {
+        Compilation compilation = compile(
+                "import androidx.appsearch.app.StringSerializer;\n"
+                        + "import java.net.MalformedURLException;\n"
+                        + "import java.net.URL;\n"
+                        + "@Document\n"
+                        + "class Gift {\n"
+                        + "    @Document.Id\n"
+                        + "    String mId = null;\n"
+                        + "    @Document.Namespace\n"
+                        + "    String mNamespace = null;\n"
+                        + "    @Document.StringProperty(serializer = UrlAsStringSerializer.class)\n"
+                        + "    int mProductUrl = null;\n"
+                        + "    final static class UrlAsStringSerializer\n"
+                        + "            implements StringSerializer<URL> {\n"
+                        + "        @Override\n"
+                        + "        public String serialize(URL url) {\n"
+                        + "            return url.toString();\n"
+                        + "        }\n"
+                        + "        @Override\n"
+                        + "        public URL deserialize(String string) {\n"
+                        + "            try {\n"
+                        + "                return new URL(string);\n"
+                        + "            } catch (MalformedURLException e) {\n"
+                        + "                return null;\n"
+                        + "            }\n"
+                        + "        }\n"
+                        + "    }\n"
+                        + "}"
+        );
+        assertThat(compilation).hadErrorContaining(
+                "@StringProperty with serializer = UrlAsStringSerializer must only be placed on a "
+                        + "getter/field of type or array or collection of java.net.URL");
+    }
+
+    @Test
+    public void testPropertyNamedAsDocumentClassMap() throws Exception {
+        Compilation compilation = compile(
+                "@Document\n"
+                        + "public class Gift {\n"
+                        + "  @Document.Namespace String namespace;\n"
+                        + "  @Document.Id String id;\n"
+                        + "  @Document.LongProperty int documentClassMap;\n"
+                        + "}\n");
+        assertThat(compilation).succeededWithoutWarnings();
+        checkResultContains("Gift.java",
+                "int documentClassMapConv = (int) genericDoc.getPropertyLong"
+                        + "(\"documentClassMap\")");
+        checkResultContains("Gift.java", "document.documentClassMap = documentClassMapConv");
+        checkEqualsGolden("Gift.java");
+    }
+
+    @Test
+    public void testGeneratedCodeRestrictedToLibrary() throws Exception {
+        Compilation compilation = compile(
+                /* classSimpleName=*/"Gift",
+                "@Document\n"
+                        + "public class Gift {\n"
+                        + "  @Document.Namespace String namespace;\n"
+                        + "  @Document.Id String id;\n"
+                        + "}\n",
+                /* restrictGeneratedCodeToLibrary= */true);
+        assertThat(compilation).succeededWithoutWarnings();
+        checkResultContains("Gift.java", "@RestrictTo(RestrictTo.Scope.LIBRARY)");
+        checkEqualsGolden("Gift.java");
     }
 
     private Compilation compile(String classBody) {
-        return compile("Gift", classBody);
+        return compile("Gift", classBody, /* restrictGeneratedCodeToLibrary= */false);
     }
 
-    private Compilation compile(String classSimpleName, String classBody) {
+    private Compilation compile(
+            String classSimpleName, String classBody, boolean restrictGeneratedCodeToLibrary) {
         String src = "package com.example.appsearch;\n"
                 + "import androidx.appsearch.annotation.Document;\n"
                 + "import androidx.appsearch.annotation.Document.*;\n"
@@ -2715,19 +3496,38 @@ public class AppSearchCompilerTest {
         // Fully compiling this source code requires AppSearch to be on the classpath, but it only
         // builds on Android. Instead, this test configures the annotation processor to write to a
         // test-controlled path which is then diffed.
-        String outputDirFlag = String.format(
-                "-A%s=%s",
-                AppSearchCompiler.OUTPUT_DIR_OPTION,
-                mGenFilesDir.getAbsolutePath());
+        String outputDirFlag = "-A%s=%s".formatted(
+                OUTPUT_DIR_OPTION, mGenFilesDir.getAbsolutePath());
+        String restrictGeneratedCodeToLibraryFlag = "-A%s=%s".formatted(
+                RESTRICT_GENERATED_CODE_TO_LIB_OPTION, restrictGeneratedCodeToLibrary);
         return Compiler.javac()
                 .withProcessors(new AppSearchCompiler(), new AutoValueProcessor())
-                .withOptions(outputDirFlag)
+                .withOptions(outputDirFlag, restrictGeneratedCodeToLibraryFlag)
                 .compile(jfo);
     }
 
     private void checkEqualsGolden(String className) throws IOException {
-        // Get the expected file contents
         String goldenResPath = "goldens/" + mTestName.getMethodName() + ".JAVA";
+        File actualPackageDir = new File(mGenFilesDir, "com/example/appsearch");
+        File actualPath =
+                new File(actualPackageDir, IntrospectionHelper.GEN_CLASS_PREFIX + className);
+        checkEqualsGoldenHelper(goldenResPath, actualPath);
+    }
+
+    private void checkDocumentMapEqualsGolden(int roundIndex) throws IOException {
+        String goldenResPath =
+                "goldens/" + mTestName.getMethodName() + "DocumentMap_" + roundIndex + ".JAVA";
+        File actualPackageDir = new File(mGenFilesDir, "com/example/appsearch");
+        File[] files = actualPackageDir.listFiles((dir, name) ->
+                name.startsWith(IntrospectionHelper.GEN_CLASS_PREFIX + "DocumentClassMap")
+                        && name.endsWith("_" + roundIndex + ".java"));
+        Truth.assertThat(files).isNotNull();
+        Truth.assertThat(files).hasLength(1);
+        checkEqualsGoldenHelper(goldenResPath, files[0]);
+    }
+
+    private void checkEqualsGoldenHelper(String goldenResPath, File actualPath) throws IOException {
+        // Get the expected file contents
         String expected = "";
         try (InputStream is = getClass().getResourceAsStream(goldenResPath)) {
             if (is == null) {
@@ -2739,9 +3539,6 @@ public class AppSearchCompilerTest {
         }
 
         // Get the actual file contents
-        File actualPackageDir = new File(mGenFilesDir, "com/example/appsearch");
-        File actualPath =
-                new File(actualPackageDir, IntrospectionHelper.GEN_CLASS_PREFIX + className);
         Truth.assertWithMessage("Path " + actualPath + " is not a file")
                 .that(actualPath.isFile()).isTrue();
         String actual = Files.asCharSource(actualPath, StandardCharsets.UTF_8).read();
@@ -2772,14 +3569,21 @@ public class AppSearchCompilerTest {
     }
 
     private void checkResultContains(String className, String content) throws IOException {
-        // Get the actual file contents
+        String fileContents = getClassFileContents(className);
+        Truth.assertThat(fileContents).contains(content);
+    }
+
+    private void checkResultDoesNotContain(String className, String content) throws IOException {
+        String fileContents = getClassFileContents(className);
+        Truth.assertThat(fileContents).doesNotContain(content);
+    }
+
+    private String getClassFileContents(String className) throws IOException {
         File actualPackageDir = new File(mGenFilesDir, "com/example/appsearch");
         File actualPath =
                 new File(actualPackageDir, IntrospectionHelper.GEN_CLASS_PREFIX + className);
         Truth.assertWithMessage("Path " + actualPath + " is not a file")
                 .that(actualPath.isFile()).isTrue();
-        String actual = Files.asCharSource(actualPath, StandardCharsets.UTF_8).read();
-
-        Truth.assertThat(actual).contains(content);
+        return Files.asCharSource(actualPath, StandardCharsets.UTF_8).read();
     }
 }
